--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "discord.js": "^11.5.1",
     "dropbox": "^4.0.28",
     "es6-promise": "^4.2.8",
-    "isomorphic-fetch": "^2.2.1"
+    "isomorphic-fetch": "^2.2.1",
+    "json2csv": "^4.5.1"
   }
 }
