--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dropbox": "^4.0.28",
     "es6-promise": "^4.2.8",
     "isomorphic-fetch": "^2.2.1",
+    "jimp": "^0.13.0",
     "json2csv": "^4.5.1"
   }
 }
