--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "discord.js": "^13.6.0",
     "dropbox": "^4.0.30",
     "es6-promise": "^4.2.8",
-    "isomorphic-fetch": "^3.0.0"
+    "isomorphic-fetch": "^3.0.0",
+    "oracledb": "^5.5.0"
   },
   "engines": {
     "node": ">=16.6"
